tests/sksl/errors/ArrayOfVoid.glsl
### Compilation failed:

error: 3: type 'void' not allowed in this context
error: 4: type 'void' not allowed in this context
error: 5: type 'void' not allowed in this context
error: 7: type 'void' not allowed in this context
error: 8: type 'void' not allowed in this context
error: 9: type 'void' may not be used in an array
error: 10: type 'void' not allowed in this context
error: 11: type 'void' not allowed in this context
error: 12: type 'void' not allowed in this context
9 errors
